Fix: disable word-wrap (to accommodate longer emotion words)

--- a/react-app/src/styles/Journal.css
+++ b/react-app/src/styles/Journal.css
@@ -102,6 +102,8 @@
     width: auto;
 
     font-family: var(--font);
+
+    white-space: nowrap;
 }
 
 .Emotion--One {
